--- a/index.html
+++ b/index.html
@@ -1,1 +1,46 @@
-test
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>FirmexPol</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="./styles/reset.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
+    </head>
+        
+    <body>
+    <div class ="main_div">
+        <div class="navbar-box">
+            <!--<div class="navbar">-->
+                <a href="#" alt="FirmexPol" class="comp-name">FirmexPol</a>
+                <nav>
+                    <ul class="nav-list">
+                        <li class="nav-list-el">
+                            <a class="nav-link">o nas</a>
+                        </li>
+                        <li class="nav-list-el">
+                            <a class="nav-link">oferta</a>
+                        </li>
+                        <li class="nav-list-el">
+                            <a class="nav-link">kontakt</a>
+                        </li>
+                    </ul>
+                </nav>
+            <!--</div>-->
+        </div>
+        <header class = "page-header">
+            <div class="header-content">
+                <p><h1 class="header-h1">Nasza firma oferuje najwyższej jakości produkty.</h1></p>
+                <p><h2 class="header-h2">Nie wierz nam na słowo - sprawdź</h2></p>
+                <p><button class = "offer-button"><a href="#offer-content">oferta</a></button></p>
+            </div>
+        </header>
+    </div>
+    </body>
+</html>
