--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
                 <nav>
                     <ul class="nav-list">
                         <li class="nav-list-el">
-                            <a class="nav-link">o nas</a>
+                            <a class="nav-link" href="#about">o nas</a>
                         </li>
                         <li class="nav-list-el">
-                            <a class="nav-link">oferta</a>
+                            <a class="nav-link" href="#offer">oferta</a>
                         </li>
                         <li class="nav-list-el">
-                            <a class="nav-link">kontakt</a>
+                            <a class="nav-link-dis">kontakt</a>
                         </li>
                     </ul>
                 </nav>
@@ -38,9 +38,46 @@
             <div class="header-content">
                 <p><h1 class="header-h1">Nasza firma oferuje najwyższej jakości produkty.</h1></p>
                 <p><h2 class="header-h2">Nie wierz nam na słowo - sprawdź</h2></p>
-                <p><button class = "offer-button"><a href="#offer-content">oferta</a></button></p>
+                <p><button class = "offer-button"><a href="#offer">oferta</a></button></p>
             </div>
         </header>
+        <main class="page-content">
+            <section id="about" class="about-content">
+                <h1 class="about-h1">Nasi specjaliści</h1>
+                <div class="employees-container">
+                    <div class="employee">
+                        <div class="employee-pic-1"></div>
+                        <div class="employee-bio">
+                            <p class="bio-name">Imię Nazwisko [ dział ]</p>
+                            <p class="bio-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+                        </div>
+                    </div>
+                    <div class="employee">
+                        <div class="employee-pic-2"></div>
+                        <div class="employee-bio">
+                            <p class="bio-name">Imię Nazwisko [ dział ]</p>
+                            <p class="bio-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+                        </div>
+                    </div>
+                    <div class="employee">
+                        <div class="employee-pic-3"></div>
+                        <div class="employee-bio">
+                            <p class="bio-name">Imię Nazwisko [ dział ]</p>
+                            <p class="bio-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+                        </div>
+                    </div>
+                    <div class="employee">
+                        <div class="employee-pic-4"></div>
+                        <div class="employee-bio">
+                            <p class="bio-name">Imię Nazwisko [ dział ]</p>
+                            <p class="bio-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+                        </div>
+                    </div>
+                    
+                </div>
+            </section>
+        </main>
     </div>
+    
     </body>
 </html>
