--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <body>
     <div class ="main_div">
         <div class="navbar-box">
-            <!--<div class="navbar">-->
+            <div class="navbar">
                 <a href="#" alt="Hog-Pol" class="comp-name">Hog-Pol</a>
                 <nav>
                     <ul class="nav-list">
@@ -33,13 +33,15 @@
                         </li>
                     </ul>
                 </nav>
-            <!--</div>-->
+            </div>
         </div>
         <header class = "page-header">
             <div class="header-content">
-                <p><h1 class="header-h1">Nasza firma oferuje najwyższej jakości produkty.</h1></p>
-                <p><h2 class="header-h2">Nie wierz nam na słowo - sprawdź</h2></p>
-                <p><button class = "offer-button"><a href="#offer">oferta</a></button></p>
+                <div class ="header-smallbox">
+                    <h1 class="header-h1">Nasza firma oferuje najwyższej jakości produkty.</h1>
+                    <h2 class="header-h2">Nie wierz nam na słowo - sprawdź</h2>
+                    <button class = "offer-button"><a href="#offer">oferta</a></button>
+                </div>
             </div>
         </header>
         <main class="page-content">
@@ -76,26 +78,30 @@
                     </div>
                 </div>
             </section>
-            <section id="offer" class="offer-content">
-                <div class="offer-container">
-                    <h1 class="offer-h1">Czym zajmuje się nasza firma?</h1>
-                    <div class="all-offers">
-                        <div class="offer-box-new">Usługa 1<br>
-                            <p class="new-text">(nowość)</p>
+            <section id="offer">
+                <div class="offer-content">
+                    <div class="offer-container">
+                        <h1 class="offer-h1">Czym zajmuje się nasza firma?</h1>
+                        <div class="all-offers">
+                            <div class="offer-box-new">Usługa 1<br>
+                                <p class="new-text">(nowość)</p>
+                            </div>
+                            <div class="offer-box">Lorem ipsum dolor sit amet <!--, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.--></div>
+                            <div class="offer-box">Usługa 3</div>
+                            <div class="offer-box">Usł 4</div>
+                            <div class="offer-box">Usługa 5</div>
+                            <div class="offer-box">Usługa 6</div>
                         </div>
-                        <div class="offer-box">Lorem ipsum dolor sit amet <!--, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.--></div>
-                        <div class="offer-box">Usługa 3</div>
-                        <div class="offer-box">Usł 4</div>
-                        <div class="offer-box">Usługa 5</div>
-                        <div class="offer-box">Usługa 6</div>
                     </div>
                 </div>
             </section>
         </main>
-        <footer class="footer-box">Hog-Pol - wszelkie prawa zastrzeżone, 2022
-            <div class="icon-box">
+        <footer class="footer-box">
+            <div class ="footer">Hog-Pol - wszelkie prawa zastrzeżone, 2022
+                <div class="icon-box">
                 <a href="#" alt="facebook link"><i class="fa-brands fa-instagram fa-2xl"></i></a>
                 <a href="#" alt="instagram link"><i class="fa-brands fa-square-facebook fa-2xl"></i></a>                
+                </div>
             </div>
         </footer>
     </div>
