--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hog-Pol</title>
+    <title>Firma</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -19,7 +19,7 @@
     <div class ="main_div">
         <div class="navbar-box">
             <div class="navbar">
-                <a href="#" alt="Hog-Pol" class="comp-name">Hog-Pol</a>
+                <a href="#" alt="Firma" class="comp-name">Firma</a>
                 <nav>
                     <ul class="nav-list">
                         <li class="nav-list-el">
@@ -97,7 +97,7 @@
             </section>
         </main>
         <footer class="footer-box">
-            <div class ="footer">Hog-Pol - wszelkie prawa zastrzeżone, 2022
+            <div class ="footer">Firma - wszelkie prawa zastrzeżone, 2022
                 <div class="icon-box">
                 <a href="#" alt="facebook link"><i class="fa-brands fa-instagram fa-2xl"></i></a>
                 <a href="#" alt="instagram link"><i class="fa-brands fa-square-facebook fa-2xl"></i></a>                
