--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </head>
         
     <body>
-    <div class ="main_div">
+    <!--<div class ="main_div"> w sumie jest niepotrzebny- miałam go, bo myślałam, że to jest ten div, co ma mieć 960px szerokości i w nim ma być wszystko inne-->
         <div class="navbar-box">
             <div class="navbar">
                 <a href="#" alt="Firma" class="comp-name">Firma</a>
@@ -104,7 +104,7 @@
                 </div>
             </div>
         </footer>
-    </div>
+    <!--</div>-->
     
     </body>
 </html>
