--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
     </head>
         
     <body>
-    <!--<div class ="main_div"> w sumie jest niepotrzebny- miałam go, bo myślałam, że to jest ten div, co ma mieć 960px szerokości i w nim ma być wszystko inne-->
         <div class="navbar-box">
             <div class="navbar">
                 <a href="#" alt="Firma" class="comp-name">Firma</a>
@@ -38,52 +37,52 @@
         <header class = "page-header">
             <div class="header-content">
                 <div class ="header-smallbox">
-                    <h1 class="header-h1">Nasza firma oferuje najwyższej jakości produkty.</h1>
-                    <h2 class="header-h2">Nie wierz nam na słowo - sprawdź</h2>
-                    <button class = "offer-button"><a href="#offer">oferta</a></button>
+                    <h1 class="intro">Nasza firma oferuje najwyższej jakości produkty.</h1>
+                    <h3 class="intro-2">Nie wierz nam na słowo - sprawdź</h3>
+                    <p class="offer-link"><a href="#offer">oferta</a></p>
                 </div>
             </div>
         </header>
         <main class="page-content">
             <section id="about" class="about-content">
                 <div class="employees-container">
-                    <h1 class="about-h1">Nasi specjaliści</h1>
-                    <div class="employee">
-                        <div class="employee-pic-1"></div>
+                    <h2 class="about-header">Nasi specjaliści</h2>
+                    <article class="employee">
+                        <div class="employee-pic em-pic-1"></div>
                         <div class="employee-bio">
                             <p class="bio-name">Imię Nazwisko [ dział ]</p>
                             <p class="bio-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
                         </div>
-                    </div>
-                    <div class="employee">
-                        <div class="employee-pic-2"></div>
+                    </article>
+                    <article class="employee">
+                        <div class="employee-pic em-pic-2"></div>
                         <div class="employee-bio">
                             <p class="bio-name">Imię Nazwisko [ dział ]</p>
                             <p class="bio-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
                         </div>
-                    </div>
-                    <div class="employee">
-                        <div class="employee-pic-3"></div>
+                    </article>
+                    <article class="employee">
+                        <div class="employee-pic em-pic-3"></div>
                         <div class="employee-bio">
                             <p class="bio-name">Imię Nazwisko [ dział ]</p>
                             <p class="bio-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
                         </div>
-                    </div>
-                    <div class="employee">
-                        <div class="employee-pic-4"></div>
+                    </article>
+                    <article class="employee">
+                        <div class="employee-pic em-pic-4"></div>
                         <div class="employee-bio">
                             <p class="bio-name">Imię Nazwisko [ dział ]</p>
                             <p class="bio-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
                         </div>
-                    </div>
+                    </article>
                 </div>
             </section>
             <section id="offer">
                 <div class="offer-content">
                     <div class="offer-container">
-                        <h1 class="offer-h1">Czym zajmuje się nasza firma?</h1>
+                        <h2 class="offer-header">Czym zajmuje się nasza firma?</h2>
                         <div class="all-offers">
-                            <div class="offer-box-new">Usługa 1<br>
+                            <div class="offer-box offer-new">Usługa 1<br>
                                 <p class="new-text">(nowość)</p>
                             </div>
                             <div class="offer-box">Lorem ipsum dolor sit amet <!--, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.--></div>
