--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                             <div class="offer-box offer-new">Usługa 1<br>
                                 <p class="new-text">(nowość)</p>
                             </div>
-                            <div class="offer-box">Lorem ipsum dolor sit amet <!--, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.--></div>
+                            <div class="offer-box">Lorem ipsum dolor sit amet</div>
                             <div class="offer-box">Usługa 3</div>
                             <div class="offer-box">Usł 4</div>
                             <div class="offer-box">Usługa 5</div>
@@ -103,7 +103,5 @@
                 </div>
             </div>
         </footer>
-    <!--</div>-->
-    
     </body>
 </html>
