--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <div class ="header-smallbox">
                     <h1 class="intro">Nasza firma oferuje najwyższej jakości produkty.</h1>
                     <h3 class="intro-2">Nie wierz nam na słowo - sprawdź</h3>
-                    <p class="offer-link"><a href="#offer">oferta</a></p>
+                    <a href="#offer">oferta</a>
                 </div>
             </div>
         </header>
